
$Id: changes.txt,v 1.32 2005/08/29 15:46:21 vvd0 Exp $

----
MVDSV v0.19-CVS build 20?? (2005.08.??)
[server]
- bugfix from 0.19: fullserverinfo was not sent to client if there was lw or ls userinfo keys
- 'cmd dlist' and 'cmd demolist' can show about 4000 demos in list now, but if serverinfo key
  status is not "Standby" or demo recording is in progress then showing only last 100 demos;
  was made some additional changes:
  - MAX_BACK_BUFFERS increased from 16 to 128 (EXPERIMENTAL)
  - MAX_REDIRECTMESSAGES increased from 4 to 128 (EXPERIMENTAL)
- bugfix from 0.160b: pause with sv_minping > 0 cause all players disconnected
(Thaks to Siberex)


----
MVDSV v0.19 build 2050 (2005.08.01)
[server]
- bugfix ktpro: posibility to crash ktpro from client
(Thaks to MoosemaN)
- bugfix from 0.179b: internal 'cmd dl' function used one queue for all players -
  made self queue for each player


----
MVDSV v0.18 build 2040 (2005.07.22)
- project cleaned up
[server]
- removed cvar sv_aim (by Disconnect)
- only set the client to cs_spawned state AFTER we've verified his spawncount
(by Disconnect from ZQuake)
- don't send to zombies (by Disconnect from ZQuake)
[unix]
- bugfix from 0.179b: crashes while printing red text in some places
(Thanks to Oppy)


----
MVDSV v0.179 Beta DEVELOP build 2033 (2005.07.15)
[unix qwdtools]
- bugfix from 0.176: crashed - bug was in Makefile
(Thanks to Disconnect)
[server]
- new cvar sv_registrationinfo - text shown before "enter login" (RFE #1198104)
(by hdworak)
- new cvar sv_forcenick - if the player has logged in ('accounts' file),
  force his nick to match the login and forbid changing nickname (RFE #1198108)
  0 - don't force
  1 - as login
  default: 0
(by hdworak)
- bugfix: format string vulnerabilities (by droogie)
- new command modfraglogfile - turn on/off parsing mod messages for frags and logging in
  modfrag_N.log file with additional info (weapon and etc.) to create more detailed statistics
  (EXPERIMENTAL)